python/testData/quickFixes/PyAddImportQuickFixTest/commonSubModuleAliasFromImport/main.py
<error descr="Unresolved reference 'plt'">p<caret>lt</error>.plot()
